--- a/estilo.css
+++ b/estilo.css
@@ -218,7 +218,7 @@ hr{
 		position: absolute;
 		top: 0;
 		left: 0;
-		background: white;
+		background: withe;
 		height: 100%;
 		padding: 30px;
 		opacity: .9;
